src/objects/Mogli_SMS__QuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__Form__c</fullName>
        <label>Form</label>
        <referenceTo>Mogli_SMS__Form__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will link the Question Response to the original Outbound Mogli message.</description>
        <inlineHelpText>This field will link the Question Response to the original Outbound Mogli message.</inlineHelpText>
        <label>Mogli Question</label>
        <referenceTo>Mogli_SMS__SMS__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will link the Question Response to the original Inbound Mogli message.</description>
        <inlineHelpText>This field will link the Question Response to the original Inbound Mogli message.</inlineHelpText>
        <label>Mogli Response</label>
        <referenceTo>Mogli_SMS__SMS__c</referenceTo>
        <relationshipLabel>Question Responses (Mogli Response)</relationshipLabel>
        <relationshipName>Question_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__QuestionTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Template</label>
        <referenceTo>Mogli_SMS__QuestionTemplate__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Question_Text__c</fullName>
        <description>Copy of the question text that was asked at the time of the question (in case the question template changes)</description>
        <inlineHelpText>Copy of the question text that was asked at the time of the question (in case the question template changes)</inlineHelpText>
        <label>Question Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Response_Attachments__c</fullName>
        <formula>Mogli_SMS__Mogli_Response__r.Mogli_SMS__Attachments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QRN{0000000000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>